--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard] (>=0.116.1,<0.117.0)",
-    "sqlmodel (>=0.0.24,<0.0.25)"
+    "sqlmodel (>=0.0.24,<0.0.25)",
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "psycopg2 (>=2.9.10,<3.0.0)"
 ]
 
 [tool.poetry]
