--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "fastapi[standard] (>=0.116.1,<0.117.0)",
     "sqlmodel (>=0.0.24,<0.0.25)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
 ]
 
 [tool.poetry]
