--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "sqlmodel (>=0.0.24,<0.0.25)",
     "python-dotenv (>=1.1.1,<2.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "redis[hiredis] (>=6.4.0,<7.0.0)",
 ]
 
 [tool.poetry]
